--- a/src/main/resources/templates/thankYou.html
+++ b/src/main/resources/templates/thankYou.html
@@ -5,7 +5,7 @@
         <h1>Успешна Заявка</h1>
     	<h2>Скоро ще ви се обадим</h2>
         <p>Между временно може да видите от къде ще вземете колата на картата</p>
-        <a href="/taking_place" class="btn">Към карта с място на взимане</a>
+        <a href="/#map" class="btn">Към карта с място на взимане</a>
         <a href="/" class="btn">Към начална страница</a>
         </div>
     </div>
