--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -8,6 +8,12 @@
                     <h3>Какво предлагаме? <a href="" class="typewrite" data-period="2000" data-type='[ "Коли под наем", "Специални намаления", "Пълна застраховка" ]'> <span class="wrap"></span> </a> </h3>
                     <h1>Добре дошли в RentAuto - Sofia!</h1>
                     <p>Тук може да наемете кола</p>
+                    <p>Заплащането става при взимане на автомобила. Само в брой. </p>
+                    <div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'bg', includedLanguages: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+                    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
                     <a href="/#about" class="btn btn-default section-btn">Започнете</a> </div>
             </div>
         </div>
