--- a/src/main/resources/templates/fragments/scripts.html
+++ b/src/main/resources/templates/fragments/scripts.html
@@ -1,6 +1,9 @@
 <!-- Bootstrap -->
 <script th:src="@{/js/jquery-2.1.4.min.js}"></script>
 <script th:src="@{/js/bootstrap.min.js}"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
+
 <script type="text/javascript" th:src="@{/js/bootstrap-datetimepicker.min.js}" charset="UTF-8"></script>
 
 <!-- Popup -->
