--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -1,5 +1,5 @@
 <!-- Form Section -->
-<div class="container">
+<div class="container" id="search">
     <div class="bformBox">
         <h3>РЕЗЕРВИРАЙТЕ КОЛА ДНЕС!</h3>
         <form th:action="@{/car/search}" method="POST">
