--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -11,12 +11,20 @@
         <!-- NAVIGATION LINKS -->
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
+		<li>
+			<div id="google_translate_element"></div><script type="text/javascript">
+function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'bg', includedLanguages: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
+}
+                    </script><script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
+		</li>
                 <li><a href="/#home" class="smoothScroll">Начало</a></li>
                 <li><a href="https://drive.google.com/uc?export=download&amp;id=1VqlTGN6csN1KcLiStmg10v5IvlQJRP-Z">
                     Пълни условия
                 </a></li>
-                <li><a href="/#search" class="smoothScroll">Потърсете</a></li>
-                <li><a href="/#about" class="smoothScroll">За</a></li>
+                <!--<li><a href="/#search" class="smoothScroll">Потърсете</a></li>-->
+                <li><a href="/#about" class="smoothScroll">За нас</a></li>
                 <li><a href="/#map" class="smoothScroll">Карта</a></li>
                 <li><a href="/admin/options">Админ</a></li>
                 <li><a href="tel:+359 899 5888 30" class="calltxt" onclick=""><i class="fa fa-phone" aria-hidden="true"></i> +359 899 5888 30</a></li>
