--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -7,7 +7,16 @@
                 <div class="slide-text">
                     <h3>Какво предлагаме? <a href="" class="typewrite" data-period="2000" data-type='[ "Коли под наем", "Специални намаления", "Пълна застраховка" ]'> <span class="wrap"></span> </a> </h3>
                     <h1>Добре дошли в RentAuto - Sofia!</h1>
-                    <p>Тук може да наемете кола</p>
+					<div>
+						<p style="font-size: 20px; text-align: center;">
+							Лесно се стига до нас от Летище София:<br/>
+							Взимате метрото от метростанция "Летище София"<br/>
+							до метростанция "Бели Дунав" и сте там.<br/>
+							<br/>
+							Ако искате да я вземте директно от "Летище София" - такса &euro;10<br/>
+						</p>
+                	</div>
+
                     <p>Заплащането става при взимане на автомобила. Само в брой. </p>
                     <div id="google_translate_element"></div><script type="text/javascript">
 function googleTranslateElementInit() {
