Design changes. Some text moved around.

--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -9,9 +9,9 @@
                     <h1>Добре дошли в RentAuto - Sofia!</h1>
 					<div>
 						<p style="font-size: 20px; text-align: center;">
-							Лесно се стига до нас от Летище София:<br/>
+							Лесно се стига от Летище София:<br/>
 							Взимате метрото от метростанция "Летище София"<br/>
-							до метростанция "Бели Дунав" и сте там.<br/>
+							до "Бели Дунав".<br/>
 							<br/>
 							Ако искате да я вземте директно от "Летище София" - такса &euro;10<br/>
 						</p>
