--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -24,7 +24,7 @@ function googleTranslateElementInit() {
                     Пълни условия
                 </a></li>
                 <!--<li><a href="/#search" class="smoothScroll">Потърсете</a></li>-->
-                <li><a href="/#about" class="smoothScroll">За нас</a></li>
+                <!--<li><a href="/#about" class="smoothScroll">За нас</a></li>-->
                 <li><a href="/#map" class="smoothScroll">Карта</a></li>
                 <li><a href="/admin/options">Админ</a></li>
                 <li><a href="tel:+359 899 5888 30" class="calltxt" onclick=""><i class="fa fa-phone" aria-hidden="true"></i> +359 899 5888 30</a></li>
