--- a/src/main/resources/templates/fragments/banner.html
+++ b/src/main/resources/templates/fragments/banner.html
@@ -6,18 +6,13 @@
             <div class="col-md-offset-1 col-md-10 col-sm-12">
                 <div class="slide-text">
                     <h3>Какво предлагаме? <a href="" class="typewrite" data-period="2000" data-type='[ "Коли под наем", "Специални намаления", "Пълна застраховка" ]'> <span class="wrap"></span> </a> </h3>
-                    <h1>Добре дошли в RentAuto - Sofia!</h1>
+                    <h1>Телефон за връзка: <a href="tel:+359 899 5888 30">+359 899 5888 30</a></h1>
 					<div>
 						<p style="font-size: 20px; text-align: center;">
-							Лесно се стига от Летище София:<br/>
-							Взимате метрото от метростанция "Летище София"<br/>
-							до "Бели Дунав".<br/>
-							<br/>
+                            За заявка може директно да се обадите или да видите цените и колите след потърсване (по-долу)<br/>
 							Ако искате да я вземте директно от "Летище София" - такса &euro;10<br/>
-						</p>
+                            Заплащането става при взимане на автомобила. Само в брой. </p>
                 	</div>
-
-                    <p>Заплащането става при взимане на автомобила. Само в брой. </p>
                     <a href="/#about" class="btn btn-default section-btn">Започнете</a> </div>
             </div>
         </div>
