--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -44,13 +44,8 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-6 col-sm-6">
-                    <button type="button" class="btn btn-block" onclick="location.href = '/#contact'">Вижте адреса</button>
-                </div>
-                <div class="col-md-6 col-sm-6">
-                    <div class="formrow">
-                        <input type="text" class="form-control" placeholder="Телефон" name="phone" required="required">
-                    </div>
+                <div class="col-md-12 col-sm-12">
+                    <button type="button" class="btn btn-block" onclick="location.href = '/#map'">Вижте адреса</button>
                 </div>
             </div>
             <div class="formbtn">
@@ -60,9 +55,9 @@
     </div>
 </div>
 <script>
-    // When the user clicks on div, open the popup
+    // When the user clicks on the div, open the popup
     function popUp() {
-            var popup = document.getElementById("myPopUp");
+            let popup = document.getElementById("myPopUp");
                 popup.classList.toggle("show");
     }
 </script>
