--- a/src/main/resources/templates/admin/bookRequest/accept.html
+++ b/src/main/resources/templates/admin/bookRequest/accept.html
@@ -5,12 +5,14 @@
                 <th:block th:include="fragments/tableHeadImageName"></th:block>
                 <th>Телефон</th>
                 <th>Име</th>
+                <th>Email</th>
                 <th>Начална дата</th>
                 <th>Крайна дата</th>
             </tr>
             <tr>
                 <td><img th:src="${car.imgURL}"/></td>
                 <td>[[${car.name}]]</td>
+                <td>[[${customer.email}]]</td>
                 <td>[[${customer.phoneNumber}]]</td>
                 <td th:text="${customer?.name}">Няма</td>
                 <td>[[${startDate}]]</td>
