--- a/src/main/resources/templates/admin/customer/delete.html
+++ b/src/main/resources/templates/admin/customer/delete.html
@@ -4,11 +4,8 @@
         <form th:action="@{/admin/customer/{id}/delete(id=${customer.id})}" method="POST">
             <div>
 
-                <label for="name">Име</label>
-                <input type="text" id="name" name="name" th:value="${customer.name}" disabled="disabled" />
-
-                <label for="phoneNumber">Телефон</label>
-                <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" disabled="disabled" />
+                <label for="id">ID:</label>
+                <input type="text" id="id" name="id" th:value="${car.id}" disabled="disabled" />
 
                 <div>
                     <button type="submit">Изтрий</button>
