--- a/src/main/resources/templates/admin/customer/edit.html
+++ b/src/main/resources/templates/admin/customer/edit.html
@@ -10,6 +10,9 @@
                 <label for="phoneNumber">Телефон</label>
                 <input type="text" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" />
 
+                <label for="email">Email</label>
+                <input type="email" id="email" name="email" th:value="${customer.email}" />
+
                 <div>
                     <button type="submit">Редактирай</button>
                 </div>
