Client booking history not deleting fixed. Requests and clients are no longer duplicating if the user sends the same request multiple times. More information in the admin history page of bookings.

--- a/src/main/resources/templates/admin/booking/delete.html
+++ b/src/main/resources/templates/admin/booking/delete.html
@@ -45,6 +45,20 @@
 </section>
 <section>
     <div>
+        <table>
+            <tr>
+                <th>Цена на ден</th>
+                <th>Цяла цена</th>
+            </tr>
+            <tr>
+                <td>[[${pricePerDay}]]</td>
+                <td>[[${totalPrice}]]</td>
+            </tr>
+        </table>
+    </div>
+</section>
+<section>
+    <div>
         <form th:action="@{/admin/booking/{id}/delete(id=${bookingId})}" method="POST">
             <div>
                 <button type="submit">Изтрий</button>
