--- a/src/main/resources/templates/admin/customer/delete.html
+++ b/src/main/resources/templates/admin/customer/delete.html
@@ -5,7 +5,7 @@
             <div>
 
                 <label for="id">ID:</label>
-                <input type="text" id="id" name="id" th:value="${car.id}" disabled="disabled" />
+                <input type="text" id="id" name="id" th:value="${customer.id}" disabled="disabled" />
 
                 <div>
                     <button type="submit">Изтрий</button>
