--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -24,17 +24,37 @@
                                         <div style="font-size: 25px" class="date"><i class="fa fa-money" aria-hidden="true"></i> TOTAL: &euro;[[${totalPrice}]]</div>
                                     </div>
                                     <div>
-                                        <form th:action="@{/car/{id}/book(id=${car.id})}" id="confirmForm" method="POST">
+                                        <form th:action="@{/car/{id}/book(id=${car.id})}" id="confirmForm" method="POST" onsubmit="document.getElementById('payDepositNow').value = document.getElementById("researchPaper").checked;" >
                                             <div class="formrow">
                                                 <input type="hidden" id="startDate" name="startDate" th:value="${param.datetime_pick[0]}"/>
                                                 <input type="hidden" id="endDate" name="endDate" th:value="${param.datetime_off[0]}"/>
 
 
                                                 <label for="email">Email</label>
-                                                <input type="email" id="email" name="email" th:value="${customer.email}" />
+                                                <input type="email"
+                                                       style="padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"
+                                                       id="email" name="email" th:value="${customer.email}" />
 
                                                 <label for="phoneNumber">Телефон</label>
-                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" />
+                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}"
+                                                       style="padding: 12px 20px 12px 50px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"/>
+                                                <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}"></script>
+                                                <!-- Bootstrap -->
+
+                                                <br/>
+                                                <label class="check-container">Сега ще платя депозит:
+                                                    <input id="payDepositNow" type="checkbox" name="payDepositNow" th:checked="${payDepositNow}">
+                                                    <span class="checkmark"></span>
+                                                </label>
+
+
+                                                <script>
+                                                    $("#phoneNumber").intlTelInput({
+                                                        nationalMode: false,
+                                                        preferredCountries: ['bg'],
+                                                    });
+                                                </script>
+
                                             </div>
                                         </form>
                                     </div>
