--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -1,23 +1,23 @@
-<head>
-    <!-- Google Adsense -->
-    <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<head xmlns:th="http://www.springframework.org/schema/data/jaxb">
+    <!--&lt;!&ndash; Google Adsense &ndash;&gt;-->
+    <!--<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>-->
+    <!--<script>-->
+    <!--(adsbygoogle = window.adsbygoogle || []).push({-->
+    <!--google_ad_client: "ca-pub-1870823969129961",-->
+    <!--enable_page_level_ads: true-->
+    <!--});-->
+    <!--</script>-->
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-119032044-1"></script>
     <script>
-  (adsbygoogle = window.adsbygoogle || []).push({
-          google_ad_client: "ca-pub-1870823969129961",
-              enable_page_level_ads: true
-                    });
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-119032044-1');
     </script>
 
-	<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=UA-119032044-1"></script>
-	<script>
-	  window.dataLayer = window.dataLayer || [];
-	  function gtag(){dataLayer.push(arguments);}
-	  gtag('js', new Date());
-
-	  gtag('config', 'UA-119032044-1');
-	</script>
-		
     <meta charset="UTF-8">
     <title th:if="${pageTitle}" th:text="${pageTitle}"></title>
     <meta http-equiv="X-UA-Compatible" content="IE=Edge">
@@ -45,4 +45,12 @@
 
     <!-- Main css -->
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <!-- Todo -->
+    <link rel="stylesheet" th:href="@{/intl-tel-input-12.1.0/build/css/intlTelInput.css}">
+
+
+    <!-- Must be in this order!! -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+    <script th:src="@{/js/smoothscroll.js}"></script>
+
 </head>
