--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -12,7 +12,8 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav navbar-right">
 		<li>
-			<div id="google_translate_element"></div><script type="text/javascript">
+			<div id="google_translate_element" style="margin-top: 10px"></div>
+            <script type="text/javascript">
 function googleTranslateElementInit() {
       new google.translate.TranslateElement({pageLanguage: 'bg', includedLanguages: 'en', layout: google.translate.TranslateElement.InlineLayout.SIMPLE}, 'google_translate_element');
 }
