--- a/src/main/resources/templates/success.html
+++ b/src/main/resources/templates/success.html
@@ -1,1 +1,1 @@
-<th:block th:include="thankYou" th:with="message='Депозита можете да платите и по-късно.'"></th:block>
+<th:block th:include="thankYou" th:with="message='Успешно платихте депозита.'"></th:block>
