--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -38,7 +38,7 @@
                                                 <label for="phoneNumber">Телефон</label>
                                                 <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}"
                                                        style="padding: 12px 20px 12px 50px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"/>
-                                                <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}"></script>
+                                                <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}" type="text/javascript"></script>
 
                                                 <script>
                                                     $("#phoneNumber").intlTelInput({
