--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -26,18 +26,18 @@
                                     <div>
                                         <form th:action="@{/car/{id}/book(id=${car.id})}" id="confirmForm" method="POST" >
                                             <div class="formrow">
-                                                <input type="hidden" id="startDate" name="startDate" th:value="${param.datetime_pick[0]}"/>
+                                                <input type="hidden" id="startDate" name="startDate" th:value="${param.datetime_pick[0]}" />
                                                 <input type="hidden" id="endDate" name="endDate" th:value="${param.datetime_off[0]}"/>
 
 
                                                 <label for="email">Email</label>
                                                 <input type="email"
                                                        style="padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"
-                                                       id="email" name="email" th:value="${customer.email}" />
+                                                       id="email" name="email" th:value="${customer.email}" required="required" />
 
                                                 <label for="phoneNumber">Телефон</label>
                                                 <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}"
-                                                       style="padding: 12px 20px 12px 50px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"/>
+                                                       style="padding: 12px 20px 12px 50px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;" required="required" />
                                                 <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}" type="text/javascript"></script>
 
                                                 <script>
