--- a/src/main/resources/templates/car/search.html
+++ b/src/main/resources/templates/car/search.html
@@ -7,7 +7,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group"> <span class="input-group-addon"><i class="fa fa-map-marker" aria-hidden="true"></i> Място на взимане</span>
-                            <select class="form-control" data-live-search="true" name="pickup" id="pickup" required="required" >
+                            <select class="form-control" data-live-search="true" name="pickup" id="pickup" required="required" />
                                 <option value="">Mясто на взимане</option>
                                 <option>Sofia</option>
                             </select>
@@ -17,7 +17,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group date form_datetime" data-date="2018-02-22T05:25:07Z" data-date-format="dd MM yyyy" data-link-field="dtp_input1">
-                            <input class="form-control" size="16" type="text" value="" readonly placeholder="Изберете дата" name="datetime_pick" required="required" >
+                            <input class="form-control" size="16" type="text" value="" readonly placeholder="Изберете дата" name="datetime_pick" required="required" />
                             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span> <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
@@ -27,7 +27,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group"> <span class="input-group-addon"><i class="fa fa-map-marker" aria-hidden="true"></i> Място на връщане</span>
-                            <select class="form-control" data-live-search="true" name="dropoff" id="drop" required="required">
+                            <select class="form-control" data-live-search="true" name="dropoff" id="drop" required="required"/>
                                 <option value="" >Mясто на връщане</option>
                                 <option>Sofia</option>
                             </select>
@@ -37,7 +37,7 @@
                 <div class="col-md-6 col-sm-6">
                     <div class="formrow">
                         <div class="input-group date form_datetime" data-date="2018-02-22T05:25:07Z" data-date-format="dd MM yyyy" data-link-field="dtp_input1">
-                            <input class="form-control" size="16" type="text" value="" readonly placeholder="Изберете дата" name="datetime_off" required="required" >
+                            <input class="form-control" size="16" type="text" value="" readonly placeholder="Изберете дата" name="datetime_off" required="required" />
                             <span class="input-group-addon"><span class="glyphicon glyphicon-remove"></span></span> <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span></span>
                         </div>
                     </div>
