--- a/src/main/resources/templates/car/book.html
+++ b/src/main/resources/templates/car/book.html
@@ -32,13 +32,10 @@
 
 
                                                 <label for="email">Email</label>
-                                                <input type="email"
-                                                       style="padding: 12px 20px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;"
-                                                       id="email" name="email" th:value="${customer.email}" required="required" />
+                                                <input type="email" class="custom-input" id="email" name="email" th:value="${customer.email}" required="required" />
 
                                                 <label for="phoneNumber">Телефон</label>
-                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}"
-                                                       style="padding: 12px 20px 12px 50px;margin: 8px 0;display: inline-block;border: 1px solid #ccc;border-radius: 4px; box-sizing: border-box;" required="required" />
+                                                <input type="tel" id="phoneNumber" name="phoneNumber" th:value="${customer.phoneNumber}" class="custom-input" />
                                                 <script th:src="@{/intl-tel-input-12.1.0/build/js/intlTelInput.js}" type="text/javascript"></script>
 
                                                 <script>
@@ -48,17 +45,17 @@
                                                     });
                                                 </script>
 
-                                                <label class="check-container">
+                                               <!--<label class="check-container">
                                                <input id="payDepositNow" type="checkbox" name="payDepositNow" th:checked="${payDepositNow}">
                                                <span class="checkmark"></span>
                                                &nbsp;&lt;&minus;&minus; Сега ли ще платите КАПАРО от €[[${deposit}]] с PayPal, за да ви се запази колата? (Натиснете за Да)
-                                                </label>
+                                               </label>-->
 
 
                                             </div>
                                         </form>
                                     </div>
-                                    <a href="javascript:{}" onclick="onclick="document.getElementById('confirmForm').submit();" class="readmore">Потвърди заявката<i class="fa fa-caret-right" aria-hidden="true"></i></a>
+                                    <a href="javascript:{}" onclick="document.getElementById('confirmForm').submit();" class="readmore">Потвърди заявката<i class="fa fa-caret-right" aria-hidden="true"></i></a>
                                 </div>
                             </div>
                         </li>
